# campero_ws

devel/: .catkin  local_setup.sh
devel/include/axis_camera/: Axis.h  inputs_outputs.h  ptz.h  set_digital_outputRequest.h  set_ptz.h  set_ptzRequest.h  set_ptzResponse.h
devel/include/campero_pad/: enable_disable_padResponse.h
devel/include/map_nav_manager/: SetFilenameResponse.h  State.h
devel/include/poi_manager/: ReadPOIsRequest.h  ReadPOIsResponse.h  UpdatePOIs.h
devel/include/realsense2_camera/: IMUInfo.h
devel/include/robotiq_2f_gripper_control/: Robotiq2FGripper_robot_output.h
devel/include/robotiq_3f_gripper_control/: Robotiq3FGripperConfig.h
devel/include/robotiq_ft_sensor/: ft_sensor.h
devel/include/robotnik_msgs/: BatteryStatusStamped.h  Data.h  ElevatorStatus.h  GetBoolResponse.h  GetMotorsHeadingOffsetRequest.h  GetMotorsHeadingOffsetResponse.h  InsertTask.h  InsertTaskRequest.h  LaserStatus.h  MotorHeadingOffset.h  MotorPID.h  MotorsStatusDifferential.h  QueryAlarm.h  QueryAlarmsResponse.h  ResetFromSubState.h  ResetFromSubStateRequest.h  ResetFromSubStateResponse.h  RobotnikMotorsStatus.h  SetBuzzerRequest.h  SetBuzzerResponse.h  SetElevatorRequest.h  SetElevatorResponse.h  SetMotorModeResponse.h  SetMotorPIDRequest.h  SetMotorStatusResponse.h  SetNamedDigitalOutputRequest.h  SetNamedDigitalOutputResponse.h  StringArray.h  ack_alarmResponse.h  alarmmonitor.h  alarmsmonitor.h  axis_recordResponse.h  enable_disableRequest.h  enable_disableResponse.h  get_alarmsResponse.h  get_digital_inputResponse.h  get_modeResponse.h  inputs_outputs.h  named_input_output.h  named_inputs_outputs.h  (+10 more)
devel/include/system_monitor/: CPUTemperatureStatus.h  CoreTemp.h  Diagnostic.h  DiagnosticNET.h  Disk.h  HDDStatus.h  NetStatus.h
devel/include/ublox_msgs/: Ack.h  CfgDAT.h  CfgGNSS.h  CfgINF.h  CfgNAV5.h  CfgNAVX5.h  CfgNMEA6.h  CfgRATE.h  CfgSBAS.h  CfgTMODE3.h  EsfRAW.h  EsfRAW_Block.h  EsfSTATUS.h  EsfSTATUS_Sens.h  HnrPVT.h  MonGNSS.h  MonHW.h  MonHW6.h  NavATT.h  NavCLOCK.h  NavDGPS.h  NavDOP.h  NavPOSECEF.h  NavPVT7.h  NavRELPOSNED.h  NavSAT.h  NavSAT_SV.h  NavSOL.h  NavSTATUS.h  NavSVINFO_SV.h  NavTIMEGPS.h  NavVELECEF.h  NavVELNED.h  RxmALM.h  RxmEPH.h  RxmRAW.h  RxmRAWX.h  RxmRTCM.h  RxmSVSI.h  RxmSVSI_SV.h
devel/lib/campero_pad/: campero_pad
devel/lib/ddynamic_reconfigure/: dd_server
devel/lib/pkgconfig/: axis_camera.pc  campero_3f_moveit.pc  campero_bringup.pc  campero_control.pc  campero_controller.pc  campero_description.pc  campero_gazebo.pc  campero_localization.pc  campero_mecanum_2f_moveit.pc  campero_mecanum_3f_moveit.pc  campero_navigation.pc  campero_pad.pc  campero_rubber_2f_moveit.pc  campero_rubber_3f_moveit.pc  campero_sim_bringup.pc  ddynamic_reconfigure.pc  lms5xx_viz.pc  map_nav_manager.pc  openrave_catkin.pc  poi_manager.pc  rcomponent.pc  realsense2_camera.pc  robot_localization_utils.pc  roboteq_bms.pc  robotiq_2f_140_gripper_visualization.pc  robotiq_2f_85_gripper_visualization.pc  robotiq_2f_c2_gripper_visualization.pc  robotiq_2f_gripper_action_server.pc  robotiq_2f_gripper_control.pc  robotiq_3f_gripper_articulated_gazebo.pc  robotiq_3f_gripper_articulated_gazebo_plugins.pc  robotiq_3f_gripper_articulated_msgs.pc  robotiq_3f_gripper_control.pc  robotiq_3f_gripper_joint_state_publisher.pc  robotiq_3f_gripper_visualization.pc  robotiq_ethercat.pc  robotiq_ft_sensor.pc  robotiq_modbus_rtu.pc  robotiq_modbus_tcp.pc  robotnik_base_hw.pc  (+13 more)
devel/lib/rcomponent/: rcomponent_diagnostic  rcomponent_server  rcomponent_simple  rcomponent_simple_async  rcomponent_template  rscomponent_template  test_namespace
devel/lib/robot_localization_utils/: navsat_transform_new_node  rl_utils
devel/lib/robotiq_2f_gripper_action_server/: robotiq_2f_gripper_action_server_client_test  robotiq_2f_gripper_action_server_node
devel/lib/robotiq_2f_gripper_control/: robotiq_2f_gripper_ethercat_node
devel/lib/robotiq_3f_gripper_control/: robotiq_3f_gripper_can_node  robotiq_3f_gripper_ethercat_node
devel/lib/robotiq_3f_gripper_joint_state_publisher/: robotiq_3f_gripper_joint_states
devel/lib/robotiq_ft_sensor/: rq_sensor  rq_test_sensor
devel/lib/robotnik_modbus_io/: robotnik_modbus_io_node
devel/lib/sick_s300_laser/: sick_s300_laser
devel/lib/sicktoolbox_wrapper2/: log_scans  print_scans  sicklms_1xx  sicklms_2xx  sicklms_5xx  time_scans
devel/lib/ur_modern_driver/: ur_driver
install/: .rosinstall  local_setup.sh  setup.sh
install/include/axis_camera/: set_digital_output.h  set_digital_outputResponse.h
install/include/campero_pad/: enable_disable_pad.h  enable_disable_padRequest.h
install/include/map_nav_manager/: SetFilename.h  SetFilenameRequest.h
install/share/campero_control/: package.xml
install/share/campero_control/cmake/: campero_controlConfig.cmake
install/share/campero_control/config/: campero_skid_control.yaml  campero_steel_omni_control.yaml
install/share/campero_control/config/gazebo/: gazebo_controller_omni.yaml
install/share/campero_control/launch/: campero_control.launch
install/share/campero_gazebo/: package.xml
install/share/campero_gazebo/cmake/: campero_gazeboConfig.cmake
install/share/campero_gazebo/launch/: campero_gazebo.launch  campero_one_robot.launch  gazebo_rviz.launch
install/share/campero_gazebo/worlds/: campero_outside.world
install/share/campero_localization/: package.xml
install/share/campero_localization/cmake/: campero_localizationConfig.cmake
install/share/campero_localization/launch/: amcl.launch  map_saver.launch  map_server.launch  navsat_transform_node.launch  robot_localization_world.launch  slam_gmapping.launch
install/share/campero_localization/maps/: robotnik.pgm  robotnik.yaml  test.pgm  test.yaml  test_robotnik.pgm  test_robotnik.yaml
install/share/campero_pad/: package.xml
install/share/campero_pad/cmake/: campero_pad-msg-paths.cmake  campero_padConfig.cmake
install/share/campero_pad/config/: ps4.yaml
install/share/campero_pad/launch/: campero_pad.launch
install/share/campero_robot/: package.xml
install/share/campero_sim/: package.xml
(+586 files in other folders)
