<?xml version="1.0"?>
<package format="2">
  <name>campero_gazebo</name>
  <version>0.0.0</version>
  <description>The campero_gazebo package</description>

  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="jgomez@robotnik.es">Jose Gómez</maintainer>
  <maintainer email="mmillet@robotnik.es">Marta Miller</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>campero_control</build_depend>  
  <build_depend>campero_robot_control</build_depend>  
  <build_depend>campero_description</build_depend> 
  <build_depend>xacro</build_depend>  
  <build_depend>hector_gazebo_plugins</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>velocity_controllers</build_depend>
  

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>campero_control</exec_depend>  
  <exec_depend>campero_robot_control</exec_depend>  
  <exec_depend>campero_description</exec_depend> 
  <exec_depend>xacro</exec_depend> 
  <exec_depend>hector_gazebo_plugins</exec_depend> 
  <exec_depend>gazebo_plugins</exec_depend> 
  <exec_depend>joint_state_controller</exec_depend> 
  <exec_depend>velocity_controllers</exec_depend> 

  <export>
	  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
</export>
</package>