<?xml version="1.0"?>
<package format="2">
  <name>campero_pad</name>
  <version>0.0.0</version>
  <description>The campero_pad package</description>

  <maintainer email="aarnal@todo.todo">aarnal</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robotnik_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>

  <export>

  </export>
</package>
