<?xml version="1.0"?>
<package format="2">
  <name>campero_robot</name>
  <version>0.0.0</version>
  <description>The campero_robot package</description>

  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="jgomez@robotnik.es">Jose Gómez</maintainer>
  <maintainer email="mmillet@robotnik.es">Marta Miller</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>